--- a/res/values/gtfs_rts_values_gen.xml
+++ b/res/values/gtfs_rts_values_gen.xml
@@ -9,4 +9,6 @@
     <string name="gtfs_rts_area_min_lng">-79.0724</string>
     <string name="gtfs_rts_area_max_lng">-78.9101</string>
     <string name="gtfs_rts_color">A68E34</string>
+    <integer name="gtfs_rts_first_departure_in_sec">1504260240</integer>
+    <integer name="gtfs_rts_last_departure_in_sec">1535715690</integer>
 </resources>
